# hector_gazebo

./: CMakeLists.txt  README.md  run_gazebo.sh  run_mujoco.sh
src/hector_assets/: CMakeLists.txt  package.xml
src/hector_assets/config/: hector_controller_config.yaml
src/hector_assets/config/rviz/: hectorv2.rviz
src/hector_assets/models/worlds/: empty.world
src/hector_assets/models/xacro/: arm.xacro  body.xacro  const.xacro  hardware.xacro  hectorv2_ee.urdf  leg.xacro  materials.xacro  robot.urdf  robot.xacro
src/hector_assets/models/xml/: hectorv2.xml
src/hector_assets/src/: odom_publisher.py
src/hector_control/: CMakeLists.txt  README.md  package.xml
src/hector_control/ConvexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  RobotState.cpp  SolverMPC.cpp  convexMPC_interface.cpp
src/hector_control/include/Custom_SDK/include/: CustomCommunication.h
src/hector_control/include/FSM/: FSM.h  FSMState.h  FSMState_PDControl.h  FSMState_Walking.h
src/hector_control/include/common/: ArmController.h  Biped.h  CheaterEstimator.h  ControlFSMData.h  DesiredCommand.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h  SwingLegController.h  cppTypes.h  enumClass.h
src/hector_control/include/interface/: Interface.h  Joystick_Interface.h  ROSIO.h
src/hector_control/include/messages/: LowLevelCmd.h
src/hector_control/launch/: control_launch.py  hardware_control_launch.py  remote_launch.py
src/hector_control/src/: main.cpp  plot_state_estimate.py  thisCOMpos.txt
src/hector_control/src/FSM/: FSM.cpp  FSMState_PDControl.cpp  FSMState_Passive.cpp  FSMState_Walking.cpp
src/hector_control/src/common/: ArmController.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp  SwingLegController.cpp
src/hector_control/src/interface/: Joystick_Interface.cpp  ROSIO.cpp
src/hector_control/test/: test_joystick_interface.cpp
src/hector_gazebo/: CMakeLists.txt  hectorMotorController.xml  package.xml
src/hector_gazebo/assets/models/worlds/: empty.sdf  world.sdf
src/hector_gazebo/assets/models/xacro/: arm.xacro  body.xacro  const.xacro  gazebo.xacro  hardware.xacro  hectorv2.urdf  leg.xacro  robot.sdf  robot.xacro
src/hector_gazebo/include/: hectorMotorController.h
src/hector_gazebo/launch/: hectorv2.launch.py  hectorv2_sdf_launch.py  test.launch.py
src/hector_gazebo/src/: hectorMotorController.cpp
src/hector_gazebo_fortress_plugin/: CMakeLists.txt  package.xml
src/hector_gazebo_fortress_plugin/include/hector_gazebo_fortress_plugin/: hector_gazebo_fortress_plugin.hh
src/hector_gazebo_fortress_plugin/src/: hector_gazebo_fortress_plugin.cc
src/hector_gazebo_plugins/: CMakeLists.txt  package.xml
src/hector_gazebo_plugins/src/: hector_gazebo_plugin.cpp
src/hector_mujoco/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/hector_mujoco/hector_mujoco/assets/hector_v1p5/: mvmc.urdf  mvmc.xml  mvmc_for_urdf.xml  mvmc_shoe.xml  mvsc.xml
src/hector_mujoco/hector_mujoco/assets/hector_v2/: mvmc.urdf  mvmc.xml  mvmc_for_urdf.xml
src/hector_mujoco/hector_mujoco/config/: hector.rviz  hector_v2.yml
src/hector_mujoco/hector_mujoco/src/: mujoco_sim_base.py  pybullet_viewer.py  robot_base.py  ros_node.py
src/hector_mujoco/hector_mujoco/tests/: mj_sim.py  robot_base.py
src/keyboard_joy/: README.md  package.xml  setup.py
src/keyboard_joy/config/: key_mappings.yaml
src/keyboard_joy/keyboard_joy/: joy_node.py
src/keyboard_joy/launch/: keyboard_joy.launch.py
src/laser_interfaces/: CMakeLists.txt  README.md  package.xml
src/laser_interfaces/msg/: ContactState.msg  EstimatedState.msg  IMU.msg  MotorCommand.msg  MotorState.msg  RobotCommand.msg  RobotState.msg
