<?xml version="1.0"?>
<package format="2">
    <name>hector_control</name>
    <version>0.0.0</version>
    <description>The quadruped controller package</description>

    <maintainer email="junchaom@usc.edu">yiyuc</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>qpoases</depend>
    <depend>laser_interfaces</depend>
    <depend>sensor_msgs</depend>


    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>cython</exec_depend>

    <test_depend>gtest</test_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>
