<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>hector_gazebo_plugins</name>
    <version>0.0.1</version>
    <description>Gazebo plugin to control Hector robot via /motor_command topic</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>gazebo_ros</depend>
    <depend>laser_interfaces</depend>
    <depend>gazebo_dev</depend> <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" />
</export>
</package>