<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_mujoco</name>
  <version>0.0.0</version>
  <description>a ros2 node for mujoco simulation of hector </description>
  <maintainer email="hector@todo.todo">hector</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ament_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>laser_interfaces</exec_depend>
  <!-- <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
