[develop]
script_dir=$base/lib/hector_mujoco
[install]
install_scripts=$base/lib/hector_mujoco

[options.data_files]
share/hector_mujoco/assets/hector_v2 = hector_mujoco/assets/hector_v2/*
share/hector_mujoco/assets/hector_v2/meshes = hector_mujoco/assets/hector_v2/meshes/*
share/hector_rviz/config = hector_mujoco/config/*